# CMake-Mbed-5.15-fork

./: .gitignore  CMakeLists.txt  LICENSE  README.md
mbed/: .gitignore  CMakeLists.txt  README.md
mbed/cmake/: stm32l432.cmake
mbed/drivers/: I2C.h  RawSerial.h  SPI.h  SerialBase.h
mbed/platform/source/: mbed_critical.c
mbed/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/TARGET_NUCLEO_L432KC/: PeripheralPins.c  system_clock.c
mbed/targets/TARGET_STM/TARGET_STM32L4/device/: stm32l4xx_hal_i2c.c  stm32l4xx_hal_pwr_ex.c
src/: main.cpp
