cmake_minimum_required(VERSION 3.9)
set(LIBRARY_NAME MBED_OS)
#project(${LIBRARY_NAME} C CXX ASM)

message("*** LOADED MBED-OS ***")

if(NOT EXISTS "$ENV{MBED_DIR}")
    message(FATAL_ERROR "Please Define Path Variable: MBED_DIR")
endif()

set(${LIBRARY_NAME}_DEFS
        -DMBED_TRAP_ERRORS_ENABLED=${TRAP_ERRORS}
        -DCOMPONENT_NSPE=1
        -DCOMPONENT_PSA_SRV_EMUL=1
        -DCOMPONENT_PSA_SRV_IMPL=1
        -DDEVICE_ANALOGIN=1
        -DDEVICE_ANALOGOUT=1
        -DDEVICE_CAN=1
        -DDEVICE_CRC=1
        -DDEVICE_FLASH=1
        -DDEVICE_I2C=1
        -DDEVICE_I2CSLAVE=1
        -DDEVICE_I2C_ASYNCH=1
        -DDEVICE_INTERRUPTIN=1
        -DDEVICE_LPTICKER=1
        -DDEVICE_MPU=1
        -DDEVICE_PORTIN=1
        -DDEVICE_PORTINOUT=1
        -DDEVICE_PORTOUT=1
        -DDEVICE_PWMOUT=1
        -DDEVICE_RESET_REASON=1
        -DDEVICE_RTC=1
        -DDEVICE_SERIAL=1
        -DDEVICE_SERIAL_ASYNCH=1
        -DDEVICE_SERIAL_FC=1
        -DDEVICE_SLEEP=1
        -DDEVICE_SPI=1
        -DDEVICE_SPISLAVE=1
        -DDEVICE_SPI_ASYNCH=1
        -DDEVICE_STDIO_MESSAGES=1
        -DDEVICE_TRNG=1
        -DDEVICE_USTICKER=1
        -DDEVICE_WATCHDOG=1
        -DEXTRA_IDLE_STACK_REQUIRED
        -DMBED_BUILD_TIMESTAMP=1602619363.0986834
        -DMBED_TICKLESS
        -DTARGET_LIKE_MBED
        -DTRANSACTION_QUEUE_SIZE_SPI=2
        -DUSE_FULL_LL_DRIVER
        -DUSE_HAL_DRIVER
        -D__CMSIS_RTOS
        -D__MBED_CMSIS_RTOS_CM
        -D__MBED__=1
)
add_definitions(${${LIBRARY_NAME}_DEFS})

set(${LIBRARY_NAME}_DIRS
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/device
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/TARGET_NUCLEO_L432KC
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4
        $ENV{MBED_DIR}/targets/TARGET_STM
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Include
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Config
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/Include
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx4
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX
        $ENV{MBED_DIR}/rtos/source
        $ENV{MBED_DIR}/rtos
        $ENV{MBED_DIR}/platform/source/minimal-printf
        $ENV{MBED_DIR}/platform/source/TARGET_CORTEX_M
        $ENV{MBED_DIR}/platform/source
        $ENV{MBED_DIR}/platform/internal
        $ENV{MBED_DIR}/platform/cxxsupport
        $ENV{MBED_DIR}/platform
        $ENV{MBED_DIR}/hal/usb
        $ENV{MBED_DIR}/hal/storage_abstraction
        $ENV{MBED_DIR}/hal
        $ENV{MBED_DIR}/features/storage/system_storage
        $ENV{MBED_DIR}/features/storage/nvstore/source
        $ENV{MBED_DIR}/features/storage/nvstore
        $ENV{MBED_DIR}/features/storage/kvstore/tdbstore
        $ENV{MBED_DIR}/features/storage/kvstore/securestore
        $ENV{MBED_DIR}/features/storage/kvstore/kv_map
        $ENV{MBED_DIR}/features/storage/kvstore/include
        $ENV{MBED_DIR}/features/storage/kvstore/global_api
        $ENV{MBED_DIR}/features/storage/kvstore/filesystemstore
        $ENV{MBED_DIR}/features/storage/kvstore/direct_access_devicekey
        $ENV{MBED_DIR}/features/storage/kvstore/conf
        $ENV{MBED_DIR}/features/storage/kvstore
        $ENV{MBED_DIR}/features/storage/filesystem/littlefs/littlefs
        $ENV{MBED_DIR}/features/storage/filesystem/littlefs
        $ENV{MBED_DIR}/features/storage/filesystem/fat/ChaN
        $ENV{MBED_DIR}/features/storage/filesystem/fat
        $ENV{MBED_DIR}/features/storage/filesystem
        $ENV{MBED_DIR}/features/storage/blockdevice
        $ENV{MBED_DIR}/features/storage
        $ENV{MBED_DIR}/features/mbedtls/targets/TARGET_STM
        $ENV{MBED_DIR}/features/mbedtls/platform/inc
        $ENV{MBED_DIR}/features/mbedtls/platform
        $ENV{MBED_DIR}/features/mbedtls/mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL/COMPONENT_NSPE
        $ENV{MBED_DIR}/features/mbedtls/mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL
        $ENV{MBED_DIR}/features/mbedtls/mbed-crypto/inc/psa
        $ENV{MBED_DIR}/features/mbedtls/mbed-crypto/inc/mbedtls
        $ENV{MBED_DIR}/features/mbedtls/mbed-crypto/inc
        $ENV{MBED_DIR}/features/mbedtls/mbed-crypto
        $ENV{MBED_DIR}/features/mbedtls/inc/mbedtls
        $ENV{MBED_DIR}/features/mbedtls/inc
        $ENV{MBED_DIR}/features/mbedtls
        $ENV{MBED_DIR}/features/frameworks
        $ENV{MBED_DIR}/features/device_key/source
        $ENV{MBED_DIR}/features/device_key
        $ENV{MBED_DIR}/features
        $ENV{MBED_DIR}/events/internal
        $ENV{MBED_DIR}/events
        $ENV{MBED_DIR}/drivers/internal
        $ENV{MBED_DIR}/drivers
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M
        $ENV{MBED_DIR}/cmsis
        $ENV{MBED_DIR}
)
include_directories(${${LIBRARY_NAME}_DIRS})

set(${LIBRARY_NAME}_SOURCES
        $ENV{CMAKE_MAIN_PROJECT_DIR}/mbed_config.h
        $ENV{MBED_DIR}/cmsis/RTE_Components.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/arm_math.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/cmsis_armcc.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/cmsis_armclang.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/cmsis_armclang_ltm.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/cmsis_compiler.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/cmsis_gcc.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/cmsis_iccarm.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/cmsis_version.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_armv81mml.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_armv8mbl.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_armv8mml.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm0.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm0plus.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm1.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm23.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm3.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm33.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm35p.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm4.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_cm7.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_sc000.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/core_sc300.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/mbed_tz_context.c
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/mpu_armv7.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/mpu_armv8.h
        $ENV{MBED_DIR}/cmsis/TARGET_CORTEX_M/tz_context.h
        $ENV{MBED_DIR}/cmsis/mbed_cmsis_conf.h
        $ENV{MBED_DIR}/drivers/AnalogIn.h
        $ENV{MBED_DIR}/drivers/AnalogOut.h
        $ENV{MBED_DIR}/drivers/BusIn.h
        $ENV{MBED_DIR}/drivers/BusInOut.h
        $ENV{MBED_DIR}/drivers/BusOut.h
        $ENV{MBED_DIR}/drivers/CAN.h
        $ENV{MBED_DIR}/drivers/DigitalIn.h
        $ENV{MBED_DIR}/drivers/DigitalInOut.h
        $ENV{MBED_DIR}/drivers/DigitalOut.h
        $ENV{MBED_DIR}/drivers/Ethernet.h
        $ENV{MBED_DIR}/drivers/FlashIAP.h
        $ENV{MBED_DIR}/drivers/I2C.h
        $ENV{MBED_DIR}/drivers/I2CSlave.h
        $ENV{MBED_DIR}/drivers/InterruptIn.h
        $ENV{MBED_DIR}/drivers/InterruptManager.h
        $ENV{MBED_DIR}/drivers/LowPowerTicker.h
        $ENV{MBED_DIR}/drivers/LowPowerTimeout.h
        $ENV{MBED_DIR}/drivers/LowPowerTimer.h
        $ENV{MBED_DIR}/drivers/MbedCRC.h
        $ENV{MBED_DIR}/drivers/PortIn.h
        $ENV{MBED_DIR}/drivers/PortInOut.h
        $ENV{MBED_DIR}/drivers/PortOut.h
        $ENV{MBED_DIR}/drivers/PwmOut.h
        $ENV{MBED_DIR}/drivers/QSPI.h
        $ENV{MBED_DIR}/drivers/RawSerial.h
        $ENV{MBED_DIR}/drivers/ResetReason.h
        $ENV{MBED_DIR}/drivers/SPI.h
        $ENV{MBED_DIR}/drivers/SPISlave.h
        $ENV{MBED_DIR}/drivers/Serial.h
        $ENV{MBED_DIR}/drivers/SerialBase.h
        $ENV{MBED_DIR}/drivers/SerialWireOutput.h
        $ENV{MBED_DIR}/drivers/Ticker.h
        $ENV{MBED_DIR}/drivers/Timeout.h
        $ENV{MBED_DIR}/drivers/Timer.h
        $ENV{MBED_DIR}/drivers/TimerEvent.h
        $ENV{MBED_DIR}/drivers/UARTSerial.h
        $ENV{MBED_DIR}/drivers/USBAudio.h
        $ENV{MBED_DIR}/drivers/USBCDC.h
        $ENV{MBED_DIR}/drivers/USBCDC_ECM.h
        $ENV{MBED_DIR}/drivers/USBHID.h
        $ENV{MBED_DIR}/drivers/USBKeyboard.h
        $ENV{MBED_DIR}/drivers/USBMIDI.h
        $ENV{MBED_DIR}/drivers/USBMSD.h
        $ENV{MBED_DIR}/drivers/USBMouse.h
        $ENV{MBED_DIR}/drivers/USBMouseKeyboard.h
        $ENV{MBED_DIR}/drivers/USBSerial.h
        $ENV{MBED_DIR}/drivers/Watchdog.h
        $ENV{MBED_DIR}/drivers/internal/AsyncOp.h
        $ENV{MBED_DIR}/drivers/internal/ByteBuffer.h
        $ENV{MBED_DIR}/drivers/internal/EndpointResolver.h
        $ENV{MBED_DIR}/drivers/internal/LinkEntry.h
        $ENV{MBED_DIR}/drivers/internal/LinkedList.h
        $ENV{MBED_DIR}/drivers/internal/LinkedListBase.h
        $ENV{MBED_DIR}/drivers/internal/MIDIMessage.h
        $ENV{MBED_DIR}/drivers/internal/OperationList.h
        $ENV{MBED_DIR}/drivers/internal/OperationListBase.h
        $ENV{MBED_DIR}/drivers/internal/PolledQueue.h
        $ENV{MBED_DIR}/drivers/internal/TableCRC.h
        $ENV{MBED_DIR}/drivers/internal/Task.h
        $ENV{MBED_DIR}/drivers/internal/TaskBase.h
        $ENV{MBED_DIR}/drivers/internal/TaskQueue.h
        $ENV{MBED_DIR}/drivers/internal/USBAudio_Types.h
        $ENV{MBED_DIR}/drivers/internal/USBDescriptor.h
        $ENV{MBED_DIR}/drivers/internal/USBDevice.h
        $ENV{MBED_DIR}/drivers/internal/USBDevice_Types.h
        $ENV{MBED_DIR}/drivers/internal/USBHID_Types.h
        $ENV{MBED_DIR}/drivers/source/AnalogIn.cpp
        $ENV{MBED_DIR}/drivers/source/AnalogOut.cpp
        $ENV{MBED_DIR}/drivers/source/BusIn.cpp
        $ENV{MBED_DIR}/drivers/source/BusInOut.cpp
        $ENV{MBED_DIR}/drivers/source/BusOut.cpp
        $ENV{MBED_DIR}/drivers/source/CAN.cpp
        $ENV{MBED_DIR}/drivers/source/DigitalIn.cpp
        $ENV{MBED_DIR}/drivers/source/DigitalInOut.cpp
        $ENV{MBED_DIR}/drivers/source/DigitalOut.cpp
        $ENV{MBED_DIR}/drivers/source/Ethernet.cpp
        $ENV{MBED_DIR}/drivers/source/FlashIAP.cpp
        $ENV{MBED_DIR}/drivers/source/I2C.cpp
        $ENV{MBED_DIR}/drivers/source/I2CSlave.cpp
        $ENV{MBED_DIR}/drivers/source/InterruptIn.cpp
        $ENV{MBED_DIR}/drivers/source/InterruptManager.cpp
        $ENV{MBED_DIR}/drivers/source/MbedCRC.cpp
        $ENV{MBED_DIR}/drivers/source/PortIn.cpp
        $ENV{MBED_DIR}/drivers/source/PortInOut.cpp
        $ENV{MBED_DIR}/drivers/source/PortOut.cpp
        $ENV{MBED_DIR}/drivers/source/PwmOut.cpp
        $ENV{MBED_DIR}/drivers/source/QSPI.cpp
        $ENV{MBED_DIR}/drivers/source/RawSerial.cpp
        $ENV{MBED_DIR}/drivers/source/ResetReason.cpp
        $ENV{MBED_DIR}/drivers/source/SPI.cpp
        $ENV{MBED_DIR}/drivers/source/SPISlave.cpp
        $ENV{MBED_DIR}/drivers/source/Serial.cpp
        $ENV{MBED_DIR}/drivers/source/SerialBase.cpp
        $ENV{MBED_DIR}/drivers/source/SerialWireOutput.cpp
        $ENV{MBED_DIR}/drivers/source/TableCRC.cpp
        $ENV{MBED_DIR}/drivers/source/Ticker.cpp
        $ENV{MBED_DIR}/drivers/source/Timeout.cpp
        $ENV{MBED_DIR}/drivers/source/Timer.cpp
        $ENV{MBED_DIR}/drivers/source/TimerEvent.cpp
        $ENV{MBED_DIR}/drivers/source/UARTSerial.cpp
        $ENV{MBED_DIR}/drivers/source/Watchdog.cpp
        $ENV{MBED_DIR}/drivers/source/usb/AsyncOp.cpp
        $ENV{MBED_DIR}/drivers/source/usb/ByteBuffer.cpp
        $ENV{MBED_DIR}/drivers/source/usb/EndpointResolver.cpp
        $ENV{MBED_DIR}/drivers/source/usb/LinkedListBase.cpp
        $ENV{MBED_DIR}/drivers/source/usb/OperationListBase.cpp
        $ENV{MBED_DIR}/drivers/source/usb/PolledQueue.cpp
        $ENV{MBED_DIR}/drivers/source/usb/TaskBase.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBAudio.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBCDC.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBCDC_ECM.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBDevice.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBHID.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBKeyboard.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBMIDI.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBMSD.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBMouse.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBMouseKeyboard.cpp
        $ENV{MBED_DIR}/drivers/source/usb/USBSerial.cpp
        $ENV{MBED_DIR}/hal/LowPowerTickerWrapper.cpp
        $ENV{MBED_DIR}/hal/LowPowerTickerWrapper.h
        $ENV{MBED_DIR}/hal/analogin_api.h
        $ENV{MBED_DIR}/hal/analogout_api.h
        $ENV{MBED_DIR}/hal/buffer.h
        $ENV{MBED_DIR}/hal/can_api.h
        $ENV{MBED_DIR}/hal/can_helper.h
        $ENV{MBED_DIR}/hal/crc_api.h
        $ENV{MBED_DIR}/hal/critical_section_api.h
        $ENV{MBED_DIR}/hal/dma_api.h
        $ENV{MBED_DIR}/hal/ethernet_api.h
        $ENV{MBED_DIR}/hal/flash_api.h
        $ENV{MBED_DIR}/hal/gpio_api.h
        $ENV{MBED_DIR}/hal/gpio_irq_api.h
        $ENV{MBED_DIR}/hal/i2c_api.h
        $ENV{MBED_DIR}/hal/itm_api.h
        $ENV{MBED_DIR}/hal/lp_ticker_api.h
        $ENV{MBED_DIR}/hal/mbed_critical_section_api.c
        $ENV{MBED_DIR}/hal/mbed_flash_api.c
        $ENV{MBED_DIR}/hal/mbed_gpio.c
        $ENV{MBED_DIR}/hal/mbed_gpio_irq.c
        $ENV{MBED_DIR}/hal/mbed_itm_api.c
        $ENV{MBED_DIR}/hal/mbed_lp_ticker_api.c
        $ENV{MBED_DIR}/hal/mbed_lp_ticker_wrapper.cpp
        $ENV{MBED_DIR}/hal/mbed_lp_ticker_wrapper.h
        $ENV{MBED_DIR}/hal/mbed_pinmap_common.c
        $ENV{MBED_DIR}/hal/mbed_pinmap_default.c
        $ENV{MBED_DIR}/hal/mbed_ticker_api.c
        $ENV{MBED_DIR}/hal/mbed_us_ticker_api.c
        $ENV{MBED_DIR}/hal/mpu/mbed_mpu_v7m.c
        $ENV{MBED_DIR}/hal/mpu/mbed_mpu_v8m.c
        $ENV{MBED_DIR}/hal/mpu_api.h
        $ENV{MBED_DIR}/hal/pinmap.h
        $ENV{MBED_DIR}/hal/port_api.h
        $ENV{MBED_DIR}/hal/pwmout_api.h
        $ENV{MBED_DIR}/hal/qspi_api.h
        $ENV{MBED_DIR}/hal/reset_reason_api.h
        $ENV{MBED_DIR}/hal/rtc_api.h
        $ENV{MBED_DIR}/hal/serial_api.h
        $ENV{MBED_DIR}/hal/sleep_api.h
        $ENV{MBED_DIR}/hal/spi_api.h
        $ENV{MBED_DIR}/hal/spm_api.h
        $ENV{MBED_DIR}/hal/storage_abstraction/Driver_Common.h
        $ENV{MBED_DIR}/hal/storage_abstraction/Driver_Storage.h
        $ENV{MBED_DIR}/hal/ticker_api.h
        $ENV{MBED_DIR}/hal/trng_api.h
        $ENV{MBED_DIR}/hal/us_ticker_api.h
        $ENV{MBED_DIR}/hal/usb/USBPhy.h
        $ENV{MBED_DIR}/hal/usb/USBPhyEvents.h
        $ENV{MBED_DIR}/hal/usb/USBPhyTypes.h
        $ENV{MBED_DIR}/hal/usb/mbed_usb_phy.cpp
        $ENV{MBED_DIR}/hal/usb/usb_phy_api.h
        $ENV{MBED_DIR}/hal/watchdog_api.h
        $ENV{MBED_DIR}/mbed.h
        $ENV{MBED_DIR}/platform/ATCmdParser.h
        $ENV{MBED_DIR}/platform/CThunk.h
        $ENV{MBED_DIR}/platform/CallChain.h
        $ENV{MBED_DIR}/platform/Callback.h
        $ENV{MBED_DIR}/platform/CircularBuffer.h
        $ENV{MBED_DIR}/platform/CriticalSectionLock.h
        $ENV{MBED_DIR}/platform/DeepSleepLock.h
        $ENV{MBED_DIR}/platform/DirHandle.h
        $ENV{MBED_DIR}/platform/FileBase.h
        $ENV{MBED_DIR}/platform/FileHandle.h
        $ENV{MBED_DIR}/platform/FileLike.h
        $ENV{MBED_DIR}/platform/FilePath.h
        $ENV{MBED_DIR}/platform/FileSystemHandle.h
        $ENV{MBED_DIR}/platform/FileSystemLike.h
        $ENV{MBED_DIR}/platform/FunctionPointer.h
        $ENV{MBED_DIR}/platform/LocalFileSystem.h
        $ENV{MBED_DIR}/platform/NonCopyable.h
        $ENV{MBED_DIR}/platform/PlatformMutex.h
        $ENV{MBED_DIR}/platform/ScopedLock.h
        $ENV{MBED_DIR}/platform/ScopedRamExecutionLock.h
        $ENV{MBED_DIR}/platform/ScopedRomWriteLock.h
        $ENV{MBED_DIR}/platform/SharedPtr.h
        $ENV{MBED_DIR}/platform/SingletonPtr.h
        $ENV{MBED_DIR}/platform/Span.h
        $ENV{MBED_DIR}/platform/Stream.h
        $ENV{MBED_DIR}/platform/Transaction.h
        $ENV{MBED_DIR}/platform/critical.h
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_algorithm
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_atomic
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_cstddef
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_functional
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_iterator
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_memory
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_mutex
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_mutex.cpp
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_tuple
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_type_traits
        $ENV{MBED_DIR}/platform/cxxsupport/mstd_utility
        $ENV{MBED_DIR}/platform/internal/CThunkBase.h
        $ENV{MBED_DIR}/platform/internal/mbed_atomic_impl.h
        $ENV{MBED_DIR}/platform/mbed_application.h
        $ENV{MBED_DIR}/platform/mbed_assert.h
        $ENV{MBED_DIR}/platform/mbed_atomic.h
        $ENV{MBED_DIR}/platform/mbed_critical.h
        $ENV{MBED_DIR}/platform/mbed_debug.h
        $ENV{MBED_DIR}/platform/mbed_error.h
        $ENV{MBED_DIR}/platform/mbed_interface.h
        $ENV{MBED_DIR}/platform/mbed_mem_trace.h
        $ENV{MBED_DIR}/platform/mbed_mktime.h
        $ENV{MBED_DIR}/platform/mbed_mpu_mgmt.h
        $ENV{MBED_DIR}/platform/mbed_poll.h
        $ENV{MBED_DIR}/platform/mbed_power_mgmt.h
        $ENV{MBED_DIR}/platform/mbed_preprocessor.h
        $ENV{MBED_DIR}/platform/mbed_retarget.h
        $ENV{MBED_DIR}/platform/mbed_rtc_time.h
        $ENV{MBED_DIR}/platform/mbed_semihost_api.h
        $ENV{MBED_DIR}/platform/mbed_sleep.h
        $ENV{MBED_DIR}/platform/mbed_stats.h
        $ENV{MBED_DIR}/platform/mbed_thread.h
        $ENV{MBED_DIR}/platform/mbed_toolchain.h
        $ENV{MBED_DIR}/platform/mbed_version.h
        $ENV{MBED_DIR}/platform/mbed_wait_api.h
        $ENV{MBED_DIR}/platform/platform.h
        $ENV{MBED_DIR}/platform/rtc_time.h
        $ENV{MBED_DIR}/platform/semihost_api.h
        $ENV{MBED_DIR}/platform/sleep.h
        $ENV{MBED_DIR}/platform/source/ATCmdParser.cpp
        $ENV{MBED_DIR}/platform/source/CThunkBase.cpp
        $ENV{MBED_DIR}/platform/source/CallChain.cpp
        $ENV{MBED_DIR}/platform/source/CriticalSectionLock.cpp
        $ENV{MBED_DIR}/platform/source/DeepSleepLock.cpp
        $ENV{MBED_DIR}/platform/source/FileBase.cpp
        $ENV{MBED_DIR}/platform/source/FileHandle.cpp
        $ENV{MBED_DIR}/platform/source/FilePath.cpp
        $ENV{MBED_DIR}/platform/source/FileSystemHandle.cpp
        $ENV{MBED_DIR}/platform/source/LocalFileSystem.cpp
        $ENV{MBED_DIR}/platform/source/Stream.cpp
        $ENV{MBED_DIR}/platform/source/SysTimer.cpp
        $ENV{MBED_DIR}/platform/source/SysTimer.h
        $ENV{MBED_DIR}/platform/source/TARGET_CORTEX_M/TOOLCHAIN_GCC/except.S
        $ENV{MBED_DIR}/platform/source/TARGET_CORTEX_M/mbed_fault_handler.c
        $ENV{MBED_DIR}/platform/source/TARGET_CORTEX_M/mbed_fault_handler.h
        $ENV{MBED_DIR}/platform/source/mbed_alloc_wrappers.cpp
        $ENV{MBED_DIR}/platform/source/mbed_application.c
        $ENV{MBED_DIR}/platform/source/mbed_assert.c
        $ENV{MBED_DIR}/platform/source/mbed_atomic_impl.c
        $ENV{MBED_DIR}/platform/source/mbed_board.c
        $ENV{MBED_DIR}/platform/source/mbed_crash_data_offsets.h
        $ENV{MBED_DIR}/platform/source/mbed_critical.c
        $ENV{MBED_DIR}/platform/source/mbed_error.c
        $ENV{MBED_DIR}/platform/source/mbed_error_hist.c
        $ENV{MBED_DIR}/platform/source/mbed_error_hist.h
        $ENV{MBED_DIR}/platform/source/mbed_interface.c
        $ENV{MBED_DIR}/platform/source/mbed_mem_trace.cpp
        $ENV{MBED_DIR}/platform/source/mbed_mktime.c
        $ENV{MBED_DIR}/platform/source/mbed_mpu_mgmt.c
        $ENV{MBED_DIR}/platform/source/mbed_os_timer.cpp
        $ENV{MBED_DIR}/platform/source/mbed_os_timer.h
        $ENV{MBED_DIR}/platform/source/mbed_poll.cpp
        $ENV{MBED_DIR}/platform/source/mbed_power_mgmt.c
        $ENV{MBED_DIR}/platform/source/mbed_retarget.cpp
        $ENV{MBED_DIR}/platform/source/mbed_rtc_time.cpp
        $ENV{MBED_DIR}/platform/source/mbed_sdk_boot.c
        $ENV{MBED_DIR}/platform/source/mbed_semihost_api.c
        $ENV{MBED_DIR}/platform/source/mbed_stats.c
        $ENV{MBED_DIR}/platform/source/mbed_thread.cpp
        $ENV{MBED_DIR}/platform/source/mbed_wait_api_no_rtos.c
        $ENV{MBED_DIR}/platform/source/mbed_wait_api_rtos.cpp
        $ENV{MBED_DIR}/platform/source/minimal-printf/mbed_printf_armlink_overrides.c
        $ENV{MBED_DIR}/platform/source/minimal-printf/mbed_printf_implementation.c
        $ENV{MBED_DIR}/platform/source/minimal-printf/mbed_printf_implementation.h
        $ENV{MBED_DIR}/platform/source/minimal-printf/mbed_printf_wrapper.c
        $ENV{MBED_DIR}/platform/toolchain.h
        $ENV{MBED_DIR}/platform/wait_api.h
        $ENV{MBED_DIR}/rtos/ConditionVariable.h
        $ENV{MBED_DIR}/rtos/EventFlags.h
        $ENV{MBED_DIR}/rtos/Kernel.h
        $ENV{MBED_DIR}/rtos/Mail.h
        $ENV{MBED_DIR}/rtos/MemoryPool.h
        $ENV{MBED_DIR}/rtos/Mutex.h
        $ENV{MBED_DIR}/rtos/Queue.h
        $ENV{MBED_DIR}/rtos/RtosTimer.h
        $ENV{MBED_DIR}/rtos/Semaphore.h
        $ENV{MBED_DIR}/rtos/ThisThread.h
        $ENV{MBED_DIR}/rtos/Thread.h
        $ENV{MBED_DIR}/rtos/mbed_rtos1_types.h
        $ENV{MBED_DIR}/rtos/mbed_rtos_storage.h
        $ENV{MBED_DIR}/rtos/mbed_rtos_types.h
        $ENV{MBED_DIR}/rtos/rtos.h
        $ENV{MBED_DIR}/rtos/source/ConditionVariable.cpp
        $ENV{MBED_DIR}/rtos/source/EventFlags.cpp
        $ENV{MBED_DIR}/rtos/source/Kernel.cpp
        $ENV{MBED_DIR}/rtos/source/Mutex.cpp
        $ENV{MBED_DIR}/rtos/source/RtosTimer.cpp
        $ENV{MBED_DIR}/rtos/source/Semaphore.cpp
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/TOOLCHAIN_GCC_ARM/mbed_boot_gcc_arm.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/mbed_boot.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/mbed_boot.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/mbed_rtos_rtx.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/mbed_rtx_conf.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/mbed_rtx_handlers.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/mbed_rtx_idle.cpp
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/mbed_rtx_storage.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx4/cmsis_os.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx4/cmsis_os1.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/Include/cmsis_os2.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/Include/os_tick.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Config/RTX_Config.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Config/RTX_Config.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Include/rtx_evr.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Include/rtx_os.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/TOOLCHAIN_GCC/TARGET_RTOS_M4_M7/irq_cm4f.S
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_core_c.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_core_ca.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_core_cm.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_delay.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_evflags.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_evr.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_kernel.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_lib.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_lib.h
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_memory.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_mempool.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_msgqueue.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_mutex.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_semaphore.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_system.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_thread.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/RTX/Source/rtx_timer.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/Source/os_systick.c
        $ENV{MBED_DIR}/rtos/source/TARGET_CORTEX/rtx5/Source/os_tick_ptim.c
        $ENV{MBED_DIR}/rtos/source/ThisThread.cpp
        $ENV{MBED_DIR}/rtos/source/Thread.cpp
        $ENV{MBED_DIR}/rtos/source/rtos_handlers.h
        $ENV{MBED_DIR}/rtos/source/rtos_idle.h
        $ENV{MBED_DIR}/targets/TARGET_STM/PeripheralPins.h
        $ENV{MBED_DIR}/targets/TARGET_STM/PinNamesTypes.h
        $ENV{MBED_DIR}/targets/TARGET_STM/PortNames.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/TARGET_NUCLEO_L432KC/PeripheralNames.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/TARGET_NUCLEO_L432KC/PeripheralPins.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/TARGET_NUCLEO_L432KC/PinNames.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/TARGET_NUCLEO_L432KC/system_clock.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/device/TOOLCHAIN_GCC_ARM/startup_stm32l432xx.S
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/device/cmsis_nvic.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/device/stm32l432xx.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/device/us_ticker_data.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/objects.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/analogin_device.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/analogout_device.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/can_device.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/cmsis.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/common_objects.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32_hal_legacy.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_adc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_adc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_adc_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_adc_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_can.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_can.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_can_legacy.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_can_legacy.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_comp.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_comp.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_conf.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_cortex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_cortex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_crc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_crc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_crc_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_crc_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_cryp.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_cryp.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_cryp_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_cryp_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dac.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dac.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dac_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dac_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dcmi.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dcmi.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_def.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dfsdm.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dfsdm.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dfsdm_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dfsdm_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dma.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dma.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dma2d.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dma2d.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dma_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dma_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dsi.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_dsi.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_exti.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_exti.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_firewall.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_firewall.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_flash.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_flash.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_flash_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_flash_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_flash_ramfunc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_flash_ramfunc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_gfxmmu.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_gfxmmu.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_gpio.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_gpio.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_gpio_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_hash.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_hash.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_hash_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_hash_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_hcd.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_hcd.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_i2c.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_i2c.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_i2c_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_i2c_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_irda.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_irda.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_irda_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_iwdg.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_iwdg.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_lcd.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_lcd.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_lptim.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_lptim.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_ltdc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_ltdc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_ltdc_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_ltdc_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_mmc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_mmc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_mmc_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_mmc_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_nand.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_nand.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_nor.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_nor.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_opamp.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_opamp.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_opamp_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_opamp_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_ospi.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_ospi.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_pcd.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_pcd.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_pcd_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_pcd_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_pwr.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_pwr.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_pwr_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_pwr_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_qspi.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_qspi.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rcc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rcc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rcc_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rcc_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rng.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rng.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rtc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rtc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rtc_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_rtc_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sai.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sai.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sai_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sai_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sd.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sd.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sd_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sd_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_smartcard.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_smartcard.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_smartcard_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_smartcard_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_smbus.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_smbus.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_spi.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_spi.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_spi_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_spi_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sram.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_sram.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_swpmi.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_swpmi.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_tim.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_tim.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_tim_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_tim_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_tsc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_tsc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_uart.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_uart.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_uart_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_uart_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_usart.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_usart.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_usart_ex.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_usart_ex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_wwdg.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_hal_wwdg.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_adc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_adc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_bus.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_comp.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_comp.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_cortex.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_crc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_crc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_crs.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_crs.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_dac.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_dac.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_dma.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_dma.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_dma2d.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_dma2d.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_dmamux.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_exti.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_exti.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_fmc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_fmc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_gpio.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_gpio.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_i2c.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_i2c.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_iwdg.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_lptim.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_lptim.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_lpuart.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_lpuart.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_opamp.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_opamp.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_pwr.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_pwr.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_rcc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_rcc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_rng.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_rng.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_rtc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_rtc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_sdmmc.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_sdmmc.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_spi.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_spi.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_swpmi.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_swpmi.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_system.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_tim.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_tim.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_usart.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_usart.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_usb.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_usb.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_utils.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_utils.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/stm32l4xx_ll_wwdg.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/system_stm32l4xx.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/device/system_stm32l4xx.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/flash_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/gpio_irq_device.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/gpio_irq_device.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/i2c_device.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/pin_device.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/pwmout_device.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/pwmout_device.h
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/serial_device.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/spi_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/TARGET_STM32L4/spi_device.h
        $ENV{MBED_DIR}/targets/TARGET_STM/USBEndpoints_STM32.h
        $ENV{MBED_DIR}/targets/TARGET_STM/USBPhyHw.h
        $ENV{MBED_DIR}/targets/TARGET_STM/USBPhy_STM32.cpp
        $ENV{MBED_DIR}/targets/TARGET_STM/analogin_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/analogout_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/can_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/device.h
        $ENV{MBED_DIR}/targets/TARGET_STM/gpio_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/gpio_irq_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/gpio_object.h
        $ENV{MBED_DIR}/targets/TARGET_STM/hal_tick_overrides.c
        $ENV{MBED_DIR}/targets/TARGET_STM/i2c_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/lp_ticker.c
        $ENV{MBED_DIR}/targets/TARGET_STM/mbed_crc_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/mbed_overrides.c
        $ENV{MBED_DIR}/targets/TARGET_STM/mbed_rtx.h
        $ENV{MBED_DIR}/targets/TARGET_STM/nvic_addr.h
        $ENV{MBED_DIR}/targets/TARGET_STM/pinmap.c
        $ENV{MBED_DIR}/targets/TARGET_STM/port_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/pwmout_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/qspi_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/reset_reason.c
        $ENV{MBED_DIR}/targets/TARGET_STM/rtc_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/rtc_api_hal.h
        $ENV{MBED_DIR}/targets/TARGET_STM/serial_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/serial_api_hal.h
        $ENV{MBED_DIR}/targets/TARGET_STM/sleep.c
        $ENV{MBED_DIR}/targets/TARGET_STM/stm32_assert.h
        $ENV{MBED_DIR}/targets/TARGET_STM/stm_spi_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/trng_api.c
        $ENV{MBED_DIR}/targets/TARGET_STM/us_ticker.c
        $ENV{MBED_DIR}/targets/TARGET_STM/us_ticker_defines.h
        $ENV{MBED_DIR}/targets/TARGET_STM/watchdog_api.c
)

add_definitions(-include $ENV{CMAKE_MAIN_PROJECT_DIR}/mbed_config.h)

set(CMAKE_STATIC_LIBRARY_PREFIX "")
set(CMAKE_STATIC_LIBRARY_SUFFIX "")
set(CMAKE_FIND_LIBRARY_PREFIXES ${CMAKE_STATIC_LIBRARY_PREFIX})
set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})

add_library(${LIBRARY_NAME} STATIC ${${LIBRARY_NAME}_SOURCES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES ENABLE_EXPORTS 1)
set_target_properties(${LIBRARY_NAME} PROPERTIES PREFIX "")
set_target_properties(${LIBRARY_NAME} PROPERTIES SUFFIX "")
target_link_libraries(${LIBRARY_NAME} -lstdc++ -lsupc++ -lm -lc -lgcc -lnosys)
